# scorep_plugin_meric

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  scorep-plugin-meric.kdev4
.kdev4/: scorep-plugin-meric.kdev4
cmake/: FindMeric.cmake  FindReuse.cmake  FindUncrustify.cmake  GitSubmoduleUpdate.cmake  PreventInSourceBuilds.cmake
src/: ExtlibWrapper.cpp  ExtlibWrapper.h  MeasurementThread.cpp  MeasurementThread.h  Metric.cpp  Metric.h  energy_metric.cpp  energy_metric.h  extlib_wrapper.cpp  extlib_wrapper.h  meric_extlib.cpp  meric_extlib.h  meric_measurement.cpp  meric_measurement.h  meric_plugin.cpp  meric_plugin.h  show_counters.cpp  utils.cpp  utils.h
test/: CMakeLists.txt  adv.c  meric_example.cpp  meric_example_basic.cpp  meric_example_reserved_mem.cpp
